--- a/hobbies.html
+++ b/hobbies.html
@@ -12,6 +12,7 @@
         <ul>
         <li>I like to tease others very much. Its my favourite passtime. </li>
         <li> Other than this I also like to watch cartoon, favourite being Vedant</li>
-        <li> and enjoy walking (actually not enjoying but still have to do coz of my motu pet and my strict instructor (yes, you guessed it right))</li></ul> </p>
-</body>
+         <li> and enjoy walking (actually not enjoying but still have to do coz of my motu pet and my strict instructor (yes, you guessed it right))</li></ul> </p>
+         <li>rupanshi is cutieee.....</li>
+    </body>
 </html>
